k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiny-svc
spec:
  type: ClusterIP 
  selector:
    app: shiny
  ports:
    - protocol: TCP
      port: 3838
      targetPort: 3838
