k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shiny
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "shinycookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shiny-dev.dide.ic.ac.uk
      secretName: tls-secret
  rules:
    - host: shiny-dev.dide.ic.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shiny-svc
                port:
                  number: 3838
